[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestr"
authors = [
  { name="Burak Karakan", email="burak.karakan@getbruin.com" },
]
description = "ingestr is a command-line application that ingests data from various sources and stores them in any database."
readme = "README.md"
dynamic = ["dependencies", "version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Database"
]

[project.urls]
Homepage = "https://github.com/bruin-data/ingestr"
Issues = "https://github.com/bruin-data/ingestr/issues"


[project.scripts]
spam-cli = "spam:main_cli"
