[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ingestr"
authors = [
  { name="Burak Karakan", email="burak.karakan@getbruin.com" },
]
dynamic = ["version"]
description = "ingestr is a command-line application that ingests data from various sources and stores them in any database."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Database"
]

[project.urls]
Homepage = "https://github.com/bruin-data/ingestr"
Issues = "https://github.com/bruin-data/ingestr/issues"

[tool.hatch.build.targets.wheel]
shared-scripts = { "bin/ingestr" = "ingestr" }
bypass-selection = true

[tool.hatch.version]
source = "vcs"