[project]
name = "ingestr-benchmarks"
version = "0.1.0"
requires-python = ">=3.9.2,<3.13"
dependencies = [
    "airbyte",
    "dlt[postgres,duckdb,bigquery,snowflake]==1.27.0",
    "dlt-verified-sources @ git+https://github.com/dlt-hub/verified-sources.git@75b3ec17eab99d0079d9f61b7f47fc8b899a5738",
    "duckdb-engine",
    "numpy",
    "pyarrow",
    "pymongo",
    "pymongoarrow==1.5.2",
    "pymysql",
    "pyyaml",
    "rich",
    "sqlalchemy>=1.4,<2",
]

[tool.uv]
package = false
